cmake_minimum_required(VERSION 3.10)

file(GLOB_RECURSE SRC_FILES *.c)
list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/heap_1.c)
list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/heap_2.c)
list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/heap_3.c)
list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/heap_5.c)

add_library(freertos OBJECT ${SRC_FILES})